kubernetes-old/New/cvat-new-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: cvat-ui
    namespace: cvat
spec:
    replicas: 2
    selector:
        matchLabels:
            app: cvat-ui 
    strategy:
        type: Recreate
    template:    
        metadata:
            labels:
                app: cvat-ui
        spec:
          containers:
          - env:
            - name: REACT_APP_API_PROTOCOL
              value: "http"
            - name: REACT_APP_API_HOST
              value: cvat-service
            - name: REACT_APP_API_URL
              value: cvat-service
            - name: REACT_APP_API_PORT
              value: "8080"    
            ports:
            - containerPort: 80              
            image: openvino/cvat_ui
            imagePullPolicy: ""
            name: cvat-ui
            resources: {}
          serviceAccountName: ""
          restartPolicy: Always
          volumes: null
