kubernetes-old/New/cvat-new-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cvat-db
  name: cvat-db
  namespace: cvat
spec:
  ports:
  - name: "6543"
    port: 6543
    targetPort: 5432
  selector:
    app: cvat-db 
status:
  loadBalancer: {}
