kubernetes-old/New/cvat-new-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvat-redis
  namespace: cvat
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: cvat-redis
