kubernetes-old/New/cvat-new-service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: cvat-service
  namespace: cvat
spec:
  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: cvat

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
  - name: "8080"    
    port: 80
    targetPort: 80
