kubernetes-old/New/cvat-new-ui-service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: cvat-ui 
  namespace: cvat
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster 
  type: LoadBalancer

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: cvat-ui

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
  - name: "9080"
    port: 9080
    targetPort: 80
