kubernetes-old/New/cvat-new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cvat-proxy
  namespace: cvat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
        worker_processes 2;
        events {
            worker_connections  1024;
        }
        http {
            include       mime.types;
            default_type  application/octet-stream;
            sendfile      on;
            keepalive_timeout  65;
            # For long domain names (e.g. AWS hosts)
            server_names_hash_bucket_size 128;
            include /etc/nginx/conf.d/*.conf;
            client_max_body_size 0;
        }
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvat-ui
                port:
                  number: 80
